@@ -1,4 +1,8 @@
 v2.6.3.2 - Bug fixed anaglyph for different data windows and display windows.
+	 - Improved performance of anaglyph and its memory footprint for
+	   data windows.
+	 - Bug fixed data window in mipmap images.  Now each mipmap shows the
+	   proper data window.
 v2.6.3.1 - Fixed selection in all cases for display and data windows.
 	 - Added missing ICC_PROFILES environment variable to search for
 	   ICC/ICM color profiles.
